--- a/.gitignore
+++ b/.gitignore
@@ -437,7 +437,7 @@ InitTestScene*.unity
 !/[Aa]ssets/Editor Default Resources/FMOD/*
 
 # Ignore the Cache folder since it is updated locally.
-/[Aa]ssets/Plugins/FMOD/Cache/*
+/[Aa]ssets/Plugins/FMOD/Cache/**
 
 # Ignore bank files in the StreamingAssets folder.
 /[Aa]ssets/StreamingAssets/**/*.bank
@@ -446,4 +446,3 @@ InitTestScene*.unity
 
 # Log files can be ignored.
 fmod_editor.log
-
